# markiro

./: .env.example  .gitignore  .npmrc  .prettierignore  .prettierrc.json  README.md  docker-compose.dev.yml  eslint.config.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  turbo.json
.claude/: launch.json
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml
apps/admin/: index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/admin/src/: app.tsx  main.tsx
apps/admin/test/: api-client.test.tsx  auth-pages.test.tsx  catalog.test.tsx  counterparties.test.tsx  employees.test.tsx  i18n.test.tsx  kiosks.test.tsx  labels-canvas.test.tsx  labels-editor.test.tsx  labels-library.test.tsx  labels-raster.test.ts  pickup-api.test.tsx  pickup-detail.test.tsx  pickup.test.tsx  setup.ts  shell-layout.test.tsx  shell.test.tsx  shifts.test.tsx
apps/api/: nest-cli.json  package.json  tsconfig.json  turbo.json  vitest.config.ts
apps/api/src/: app.module.ts  env.ts  main.ts  (+2 more)
apps/station/: README.md  index.html  package.json  tsconfig.json  turbo.json  vite.config.ts  vitest.config.ts
apps/station/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/station/src-tauri/capabilities/: default.json
apps/station/src-tauri/icons/: icon.icns
apps/station/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
docs/: architecture.md
docs/design-briefs/: 00-overview.md  01-brand-and-naming.md  02-design-system.md  03-admin-panel.md  04-line-station.md  05-landing.md  06-saas-admin.md  07-device-commissioning.md
(+252 files in other folders)
